[tool.poetry]
name = "ml-ames"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ml_ames"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
jupyterlab = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
